# CursorPool_Client

./: .eslintrc.json  .gitignore  .npmrc  .prettierrc  COMMIT_CONVENTION.md  LICENSE  README.md  commitlint.config.js  index.html  openapi.txt  package-lock.json  package.json  pnpm-lock.yaml  test.js  tsconfig.json  tsconfig.node.json  uno.config.ts  update-server.js  vite.config.ts
.github/workflows/: dev.yml  push.yml  release.yml  rust-clippy.yml  updater.yml
scripts/: version.js
src/: App.vue  disclaimer.md  main.ts
src-tauri/: .clippy.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  test.rs  test_process.rs
src-tauri/src/api/: client.rs  commands.rs  endpoints.rs  inbound.rs  interceptor.rs  mod.rs  types.rs
src-tauri/src/auth/: auth.rs  authentication.rs  mod.rs
src-tauri/src/cursor_reset/: commands.rs  mod.rs  reset.rs
src-tauri/src/database/: mod.rs
src-tauri/src/scheduler/: executor.rs  mod.rs  tasks.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: config.rs  cursor_version.rs  db.rs  error_reporter.rs  file_utils.rs  hook.rs  id_generator.rs  logger.rs  mod.rs  paths.rs  privileges.rs  process.rs  retry.rs  update_blocker.rs
src/api/: index.ts  types.ts
src/components/: ArticleList.vue  CloseConfirmModal.vue  CloseTypeSelector.vue  CursorRunningModal.vue  DashboardTour.vue  FileSelectModal.vue  InboundSelector.vue  LanguageSwitch.vue  LoginOverlay.vue  MarkdownRender.vue  NotificationPermissionSetting.vue  ThemeToggle.vue  UpdateOverlay.vue
src/composables/: theme.ts
src/layouts/: MainLayout.vue
src/locales/: index.ts  messages.ts
src/router/: guards.ts  index.ts
src/stores/: account.ts  app-close.ts  app.ts  article.ts  cursor.ts  history.ts  inbound.ts  index.ts  notification.ts  types.ts  updater.ts  user.ts
src/styles/: main.css  theme.ts
src/types/: dashboard.ts  history.ts  vue-router.d.ts
src/utils/: devtools.ts  eventBus.ts  history.ts  historyAccounts.ts  logger.ts  tauriHelper.ts
src/views/: AccountView.vue  DashboardView.vue  HistoryAccountsView.vue  HistoryView.vue  LoginView.vue  SettingsView.vue
src/views/DashboardView/: index.vue  types.ts
src/views/DashboardView/components/: AdminPrivilegeModal.vue  CCStatusModal.vue  CursorRunningModal.vue  DashboardTour.vue  DisclaimerModal.vue  InsufficientCreditsModal.vue  QuickActionsCard.vue  UnusedCreditsModal.vue  UpdateModal.vue  UsageStatsCard.vue  UserInfoCard.vue
src/views/DashboardView/composables/: useAccountActions.ts  useDashboardState.ts  useDeviceInfo.ts  useHookActions.ts  usePrivilegeCheck.ts  useVersionCheck.ts
